--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -12,6 +12,7 @@ jobs:
   label:
 
     runs-on: ubuntu-latest
+    if: github.event.pull_request.draft == true
     permissions:
       contents: read
       pull-requests: write
