--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,9 +1,1 @@
-
-AwesomeLabel:
- - "**"
-DoNotMerge:
- - "**"
-BugFix:
- - "**"
-ReadyForReview:
-- "**"
+parent_config: https://raw.githubusercontent.com/RahulPere/LabelSet/blob/main/Labeler.yml
