--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -21,4 +21,5 @@ jobs:
     - uses: actions/labeler@v2
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
-        configuration-path: .github/labeler.yml
+        configuration-path: https://raw.githubusercontent.com/RahulPere/LabelSet/blob/master/Labeler.yml
+        #.github/labeler.yml
