--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -21,5 +21,4 @@ jobs:
     - uses: actions/labeler@v2
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
-        configuration-path: https://raw.githubusercontent.com/RahulPere/LabelSet/master/Labeler.yml
-        #.github/labeler.yml
+        configuration-path: .github/labeler.yml
