--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,1 +1,4 @@
-parent_config: https://raw.githubusercontent.com/RahulPere/LabelSet/blob/master/Labeler.yml
+Ready for review:
+- "**"
+Work in progress:
+- "**"
