--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -9,16 +9,22 @@ name: Labeler
 on: [pull_request]
 
 jobs:
-  label:
-
+  labeler:
     runs-on: ubuntu-latest
-    #if: github.event.pull_request.draft == true
-    permissions:
-      contents: read
-      pull-requests: write
-
     steps:
-    - uses: actions/labeler@v2
-      with:
-        repo-token: "${{ secrets.GITHUB_TOKEN }}"
-        configuration-path: .github/labeler.yml
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+      -
+        name: Run Labeler
+        if: success()
+        uses: crazy-max/ghaction-github-labeler@v3
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          yaml-file: .github/labeler.yml
+          skip-delete: false
+          dry-run: false
+          exclude: |
+            help*
+            *issue
+            
