--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -20,7 +20,5 @@ jobs:
     - uses: actions/labeler@v2
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
-        if: github.event.pull_request.draft == true
-        when:
-          configuration-path: .github/draftLabel.yml
-        configuration-path: .github/labeler.yml
+        labels: "do not merge"
+        #configuration-path: .github/labeler.yml
