--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -6,7 +6,7 @@
 # https://github.com/actions/labeler
 
 name: Labeler
-#on: [pull_request]
+on: [pull_request]
 
 jobs:
   label:
@@ -20,4 +20,4 @@ jobs:
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
         labels: "do not merge"
-        configuration-path: .github/labeler.yml
+        configuration-path: .github/draftLabel.yml
