--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -19,5 +19,4 @@ jobs:
     - uses: actions/labeler@v2
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
-        labels: "do not merge"
-        configuration-path: .github/draftLabel.yml
+        configuration-path: .github/labeler.yml
