--- a/.github/workflows/workingLabel.yml
+++ b/.github/workflows/workingLabel.yml
@@ -5,15 +5,17 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    name: Label working progress
-    if: github.event.pull_request.draft == true
-      - uses: AlbertHernandez/working-label-action@v1.0.3
+     - name: action labler
+       if: github.event.pull_request.draft == false
+       uses: actions/labeler@v2
+       with:
+        repo-token: "${{ secrets.GITHUB_TOKEN }}"
+        
+    - name: Label working progress
+      if: github.event.pull_request.draft == true
+      uses: AlbertHernandez/working-label-action@v1.0.3
         with:
           work_in_progress_label: 'Work in progress'
           ready_to_review_label: 'Ready to review'
           
-    name: action labler
-    if: github.event.pull_request.draft == false
-    - uses: actions/labeler@v2
-      with:
-        repo-token: "${{ secrets.GITHUB_TOKEN }}"
+   
