--- a/.github/workflows/workingLabel.yml
+++ b/.github/workflows/workingLabel.yml
@@ -18,5 +18,6 @@ jobs:
        with:
         work_in_progress_label: 'Work in progress'
         ready_to_review_label: 'Ready to review'
+        repo-token: "${{ secrets.GITHUB_TOKEN }}"
           
    
