--- a/.github/workflows/workingLabel.yml
+++ b/.github/workflows/workingLabel.yml
@@ -1,24 +1,20 @@
 name: Assign work in progress label when pull request is updated
 on: [pull_request]
+  
 jobs:
-  working_label:
+  build:
     runs-on: ubuntu-latest
-    
     steps:
-    
-     - name: action labler
-       if: github.event.pull_request.draft == false
-       uses: actions/labeler@v2
-       with:
-        repo-token: "${{ secrets.GITHUB_TOKEN }}"
-        
-     - name: Label working progress
-       if: github.event.pull_request.draft == true
-       uses: AlbertHernandez/working-label-action@v1.0.3
-       with:
-        work_in_progress_label: 'Work in progress'
-        ready_to_review_label: 'Ready to review'
-       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Synchronize labels
+        uses: julb/action-manage-label@v1
+        with:
+          from: .github/config/labels.yml
+          skip_delete: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
           
    
