--- a/.github/workflows/workingLabel.yml
+++ b/.github/workflows/workingLabel.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Synchronize labels
         uses: julb/action-manage-label@v1
         with:
-          from: https://github.com/RahulPere/LabelSet/blob/master/Labeler.yml
+          from: .github/config/labels.yml
           skip_delete: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
