--- a/.github/workflows/workingLabel.yml
+++ b/.github/workflows/workingLabel.yml
@@ -1,18 +1,17 @@
-name: Labeler
-on: [pull_request]
+name: PR Labeler
+on:
+  pull_request:
+    types: [opened]
 
 jobs:
-  label:
-
+  pr-labeler:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pull-requests: write
-
     steps:
-    - uses: actions/labeler@v2
-      with:
-        repo-token: "${{ secrets.GITHUB_TOKEN }}"
+      - uses: TimonVS/pr-labeler-action@v3
+        with:
+          configuration-path: .github/pr-labeler.yml # optional, .github/pr-labeler.yml is the default value
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
           
    
