--- a/.github/workflows/workingLabel.yml
+++ b/.github/workflows/workingLabel.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - uses: TimonVS/pr-labeler-action@v3
         with:
-          configuration-path: .github/labeler.yml # optional, .github/pr-labeler.yml is the default value
+          configuration-path: .github/workflows/labeler.yml # optional, .github/pr-labeler.yml is the default value
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
