--- a/.github/workflows/PRLabeler.yml
+++ b/.github/workflows/PRLabeler.yml
@@ -1,15 +1,13 @@
-name: PR Labeler
+name: "Pull Request Labeler"
 on:
-  pull_request:
-    types: [opened]
+- pull_request_target
 
 jobs:
-  pr-labeler:
+  triage:
     runs-on: ubuntu-latest
     steps:
-      - uses: TimonVS/pr-labeler-action@v3
-        with:
-          configuration-path: .github/labeler.yml # optional, .github/pr-labeler.yml is the default value
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - uses: actions/labeler@v3
+      with:
+        repo-token: "${{ secrets.GITHUB_TOKEN }}"
+
 
