--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -1,15 +1,23 @@
-name: PR Labeler
-on:
-  pull_request:
-    types: [opened]
-
+name: Assign auto label
+on: [pull_request]
 jobs:
-  pr-labeler:
+  working_label:
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: nrccua-walter-manger/pr-label-by-base@v0.1-alpha
-        with:
-          configuration-path: .github/pr-label-by-base.yml
-        env:
-          REPO_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    
+     - name: action labler
+       if: github.event.pull_request.draft == false
+       uses: actions/labeler@v2
+       with:
+        repo-token: "${{ secrets.GITHUB_TOKEN }}"
+        
+     - name: Label working progress
+       if: github.event.pull_request.draft == true
+       uses: AlbertHernandez/working-label-action@v1.0.3
+       with:
+        work_in_progress_label: 'Work in progress'
+        ready_to_review_label: 'Ready to review'
+       env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
