--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -10,7 +10,7 @@ jobs:
        if: github.event.pull_request.draft == false
        uses: actions/labeler@v2
        with:
-        configuration-path: .github/labelers.yml
+        configuration-path: .github/labeler.yml
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
         
      - name: Label working progress
