--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -6,7 +6,7 @@ labels:
   'hotFix':
     - '\bhot( Fix)?\b'
   'feature':
-    - '\bfeature\b'
+    - '\bfeature?\b'
   'enhancement':
     - '\benhancement\b'
   'documentation':
