--- a/.github/workflows/pull_request_review.yml
+++ b/.github/workflows/pull_request_review.yml
@@ -10,5 +10,5 @@ jobs:
       env:
         APPROVALS: "1"
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        ADD_LABEL: "readyForMerge"
-        REMOVE_LABEL: "ReadyForReview"
+        ADD_LABEL: "Ready For Merge"
+        REMOVE_LABEL: "Ready For Review"
