--- a/.github/workflows/AutoLabeling.yml
+++ b/.github/workflows/AutoLabeling.yml
@@ -13,9 +13,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
-      - name: label swapping
-        uses: jinmayamashita/ready-for-review@1.0.0
-        with:
-          in-progress-label: 'WorkInProgress'
-          ready-for-review-label: 'ReadyForReview'
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+#       - name: label swapping
+#         uses: jinmayamashita/ready-for-review@1.0.0
+#         with:
+#           in-progress-label: 'WorkInProgress'
+#           ready-for-review-label: 'ReadyForReview'
+#           repo-token: ${{ secrets.GITHUB_TOKEN }}
