--- a/.github/workflows/AutoLabeling.yml
+++ b/.github/workflows/AutoLabeling.yml
@@ -1,7 +1,7 @@
 name: PR Labeler
 on:
   pull_request:
-    types: [opened]
+    types: [opened, ready_for_review]
 
 jobs:
   pr-labeler:
@@ -12,3 +12,9 @@ jobs:
           configuration-path: .github/pr-labeler.yml # optional, .github/pr-labeler.yml is the default value
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+      - uses: jinmayamashita/ready-for-review@1.0.0
+        with:
+         in-progress-label: 'In Progress label'
+         ready-for-review-label: 'ReadyForReview label'
+         repo-token: ${{ secrets.GITHUB_TOKEN }}
