--- a/.github/workflows/AutoLabeling.yml
+++ b/.github/workflows/AutoLabeling.yml
@@ -13,16 +13,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
-          if: github.event.pull_request.draft == false
       - uses: jinmayamashita/ready-for-review@1.0.0
         with:
-         in-progress-label: 'Rahul'
-         ready-for-review-label: 'ReadyForReview label'
+         in-progress-label: 'work in progress'
+         ready-for-review-label: 'ReadyForReview'
          repo-token: ${{ secrets.GITHUB_TOKEN }}
          
-         if: github.event.pull_request.draft == true
-      - uses: jinmayamashita/ready-for-review@1.0.0
-        with:
-         in-progress-label: 'Work'
-         ready-for-review-label: 'ReadyForReview label'
-         repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Avengers
+        uses: ryanvade/enforce-active-pr-labeled-action@v1
